fix(Dropdown): Dropdown appearing behind another picky
fix #21

--- a/src/Picky.scss
+++ b/src/Picky.scss
@@ -40,6 +40,7 @@ $selected: #ecf0f1;
     position: absolute;
     top: 0;
     left: 0;
+    z-index: 99;
     background: white;
     border-left: 1px solid $border;
     border-right: 1px solid $border;
